changed windy key

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script>
     const options = {
-        key: 'PsLAtXpsPTZexBwUkO7Mx5I',
+        key: '3qfSZokjcK2ljSdBUw4ov99kSe4w4LDo',
         lat: 50.4, lon: 14.3, zoom: 5,
     }
 
