--- a/hello.html
+++ b/hello.html
@@ -11,7 +11,7 @@
     const options = {
 
                 // Required: API key
-                key: 'PsLAtXpsPTZexBwUkO7Mx5I',
+                key: '3qfSZokjcK2ljSdBUw4ov99kSe4w4LDo',
 
                 // Put additional console output
                 verbose: true,
