--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,13 @@
 <html>
   <head>
+    <style>
+        #windy{
+          width:100%;
+          height: 100%;
+          min-width: 600px;
+          min-height: 600px;
+        }
+      </style>
     <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
     <script src="https://api4.windy.com/assets/libBoot.js"></script>
   </head>
