--- a/index.html
+++ b/index.html
@@ -1,53 +1,9 @@
 <html>
   <head>
-    <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
-    <script src="https://api4.windy.com/assets/libBoot.js"></script>
   </head>
   <body>
-    <div id="windy"></div>
-
-    <script>
-    const options = {
-        key: '3qfSZokjcK2ljSdBUw4ov99kSe4w4LDo',
-        lat: 50.4, lon: 14.3, zoom: 5,
-    }
-
-    windyInit( options, windyAPI => {
-
-        const { picker, utils, broadcast } = windyAPI
-
-        picker.on('pickerOpened', latLon => {
-            // picker has been opened at latLon coords
-
-            let { lat, lon, values, overlay } = picker.getParams()
-            // -> 50.4, 14.3, 'wind', [ U,V, ]
-
-            let windObject = utils.wind2obj( values )
-
-            console.log( windObject )
-
-        })
-
-        picker.on('pickerMoved', latLon => {
-            // picker was dragged by user to latLon coords
-        })
-
-        picker.on('pickerClosed', () => {
-            // picker was closed
-        })
-
-        // Wait since wather is rendered
-        broadcast.once('redrawFinished', () => {
-
-            picker.open({ lat: 48.4, lon: 14.3 })
-            // Opening of a picker (async)
-
-        })
-
-    })
-
-    </script>
-
+   <a href="/hodo" >Windy Hodograph</a>
+ 	<a href="/sounding" >Windy Sounding</a>
   </body>
 </html>
 
