--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <a href="/sounding" >Windy Sounding</a>
-    <br/>
-    <a href="/hodo" >Windy Hodograph</a>
-  </body>
+	<head>
+		<style>
+			body {
+				width: 100%;
+				height: 100%;
+				margin: 0px;
+			}
+			.centered {
+				position: fixed;
+				top: 50%;
+				left: 50%;
+				/* bring your own prefixes */
+				transform: translate(-50%, -50%);
+			}
+		</style>
+	</head>
+	<body>
+		<div class=".centered">
+			<span> Note: If you were redirected here then it means that the API3 based tools are broken after api.windy.com was changed to api3.windy.com. These are the same tools using API4 but restricted to GFS since ECMF access on windy now requires an application. I will disable the redirects once API3 based tools are working again. These tools will continue to exist as well. </span>
+			<br/>
+			<br/>
+			<a href="/sounding" >Windy Sounding</a>
+			<br/>
+			<a href="/hodo" >Windy Hodograph</a>
+			<br/>
+			<a href="https://github.com/udometer/udometer.github.io" >Source code</a>
+		</div>
+	</body>
 </html>
 
