Added more information.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div class=".centered">
-			<span> Note: If you were redirected here then it means that the API3 based tools are broken after api.windy.com was changed to api3.windy.com. These are the same tools using API4 but restricted to GFS since ECMF access on windy now requires an application. I will disable the redirects once API3 based tools are working again. These tools will continue to exist as well. </span>
+			<span> Note: If you were redirected here then it means that the API3 based tools are broken after api.windy.com was changed to api3.windy.com. These are the same tools using API4 but restricted to GFS since ECMF access on windy now requires an application process. I will disable the redirects once API3 based tools are working again or retain them if ECMWF access becomes avilable for API 4. These tools will continue to exist here. </span>
 			<br/>
 			<br/>
 			<a href="/sounding" >Windy Sounding</a>
