--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<div class="centered">
-			<span> Note: If you were redirected here from mywindy.com then it means that the API version 3 based tools are broken after api.windy.com was changed to api3.windy.com. The same tools are here, using API4, but restricted to GFS since ECMWF access on windy now requires an application process. I will disable the redirects once API3 based tools are working again or the keep the redirects if ECMWF access becomes available for API version 4. These tools will anyway continue to be hosted here.</span>
+			<span> Note: If you were redirected here from mywindy.com then it means that the API version 3 based tools are broken after api.windy.com was changed to api3.windy.com. The same tools are here, using API4, but restricted to GFS since ECMWF access via APIs on windy now requires an application process. I will disable the redirects once API3 based tools are working again or the keep the redirects if ECMWF access becomes available for API version 4. These tools will anyway continue to be hosted here.</span>
 			<br/>
 			<br/>
 			<a href="/sounding" >Windy Sounding</a>
